[style] Rename file

--- a/02_Box2D_Car_Racing_환경_분석.ipynb
+++ b/02_Box2D_Car_Racing_환경_분석.ipynb
@@ -1,48 +1,37 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# Box2D Car Racing 분석 방법"
-      ],
       "metadata": {
         "id": "IGn8LuFL9PEK"
-      }
+      },
+      "source": [
+        "# Box2D Car Racing 분석 방법"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Box2D Car Racing은 앞서 설명한대로 OpenAIGym에서 제공하는 오픈 소스 게임이다. 해당 게임에 대한 자세한 설명은 [문서](https://www.gymlibrary.dev/environments/box2d/car_racing/)에서 확인할 수 있다. 아래에는 프로젝트 이해, 활용에 필요한 내용만을 정리하여 작성한다."
-      ],
       "metadata": {
         "id": "0nkBvhfQ9eXK"
-      }
+      },
+      "source": [
+        "Box2D Car Racing은 앞서 설명한대로 OpenAIGym에서 제공하는 오픈 소스 게임이다. 해당 게임에 대한 자세한 설명은 [문서](https://www.gymlibrary.dev/environments/box2d/car_racing/)에서 확인할 수 있다. 아래에는 프로젝트 이해, 활용에 필요한 내용만을 정리하여 작성한다."
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Car Racing 환경"
-      ],
       "metadata": {
         "id": "fmU3qWGI-fSq"
-      }
+      },
+      "source": [
+        "## Car Racing 환경"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "S8mJ_yvEA_wz"
+      },
       "source": [
         "<img src = \"https://www.gymlibrary.dev/_images/car_racing.gif\" height = 150 width = 200>\n",
         "\n",
@@ -55,15 +44,15 @@
         "4. 자이로스코프\n",
         "\n",
         "를 나타낸다. 자세한 설명은 뒤에 다시 언급한다."
-      ],
-      "metadata": {
-        "id": "S8mJ_yvEA_wz"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "pOXdRYL0JXNV"
+      },
       "source": [
-        "### 1) 기본 정보\n",
+        "## 1. 기본 정보\n",
         "- **게임 화면 크기** : (96,96, 3)\n",
         "- **액션(Action)**\n",
         "  \n",
@@ -89,22 +78,22 @@
         "  1. 한 에피소드는 agent가 처음 시작위치로 돌아왔을 때, 모든 타일의 `lap_complete_percent`이상 방문되었으면 종료된다.\n",
         "  2. 차가 playfield를 벗어나면 보상으로 -100을 받고 사망한다.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "pOXdRYL0JXNV"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## 2) 코드 분석"
-      ],
       "metadata": {
         "id": "hH1vgQP2XfAz"
-      }
+      },
+      "source": [
+        "## 2. 코드 분석"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "LLE5ZL1Sagw7"
+      },
       "source": [
         "게임을 구성하는 코드는 [링크](\n",
         "https://github.com/openai/gym/blob/master/gym/envs/box2d/car_racing.py)에서 확인할 수 있다. 코드는 크게 아래 구조로 구성되어 있다.\n",
@@ -112,25 +101,25 @@
         "- Class FrictionDetector\n",
         "- Class CarRacing\n",
         "- main"
-      ],
-      "metadata": {
-        "id": "LLE5ZL1Sagw7"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "CGDEabQia0Pr"
+      },
       "source": [
         "**1. Class FrictionDetector**\n",
         "\n",
         "두 물체 사이의 접촉 여부를 확인한다. 해당 게임에서는 자동차와 도로간의 접촉 여부로 보상 값과 게임 종료 여부를 판단.\n",
         "- 만약 방문하지 않은 타일이면 `road_visited`를 True로 바꾸고 보상 1000/N을 추가한다."
-      ],
-      "metadata": {
-        "id": "CGDEabQia0Pr"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "CV8aPxvmdzmY"
+      },
       "source": [
         "**2. Class CarRacing**\n",
         "\n",
@@ -144,34 +133,41 @@
         "- lap_complete_percent : 몇 퍼센트의 타일을 모두 지났을 때 lap을 완료했다고 판단할지를 나타냄.\n",
         "- domain_randomize : 도로와 배경 색상을 매 시나리오마다 달리할 것인지 여부\n",
         "- continuous : 액션 종류 정의."
-      ],
-      "metadata": {
-        "id": "CV8aPxvmdzmY"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "BwOtTfYFOVEj"
+      },
       "source": [
         "코랩 환경에서는 Box2D Car Racing의 코드 실행 도중 화면을 실시간으로 랜더링하기 어렵다. 환경을 정확히 파악하기 위해서는 화면 랜더링과 사용자의 입력이 동시에 가능해야하므로 별도의 파이썬 코드를 로컬 환경에서 돌리고자 한다.\n",
         "\n",
-        "기존의 코드에서 불필요한 코드는 삭제하고 핵심적인 게임 수행 부분만 실행 가능하도록 수정했다.\n",
-        "- continous 액션 코드\n",
-        "- descrete 액션 코드\n",
-        "\n",
-        "- 링크 연결하기\n"
-      ],
-      "metadata": {
-        "id": "BwOtTfYFOVEj"
-      }
+        "기존의 코드에서 불필요한 코드는 삭제하고 핵심적인 게임 수행 부분만 실행 가능하도록 수정한다.\n"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "다음에는 자율주행을 학습하기 위해 알아야 할 강화학습 기본 개념에 대해 공부한다."
-      ],
       "metadata": {
         "id": "rfKBTviNgOoz"
-      }
+      },
+      "source": [
+        "다음에는 자율주행을 학습하기 위해 알아야 할 강화학습 기본 개념에 대해 공부한다."
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
