[feat] Add Example of Reinforcement Learning

--- a/03_강화학습.ipynb
+++ b/03_강화학습.ipynb
@@ -70,6 +70,27 @@
     "\n",
     "    하지만 반대로 각 환경 상태에 대한 정의, 보상에 대한 것은 사람이 정의해야하므로, 강화학습이 잘되도록 디자인하는 것이 어렵다는 단점이 있다."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. 강화학습의 종류"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "강화학습의 종류로는 여러가지가 있지만 그 중에서 일부만을 다룬다.\n",
+    "1) DQN(Deep Q-Network)\n",
+    "\n",
+    "    - 딥러닝과 강화학습을 결합한 알고리즘으로 각 행동의 Q 함수를 근사화\n",
+    "\n",
+    "2) PPO(Proximal Policy Optimization)\n",
+    "\n",
+    "    - 정책의 업데이터와 이전 정책과 너무 멀어지지 않도록 제한하여 학습의 안정성을 높임."
+   ]
   }
  ],
  "metadata": {
