[feat] Data Augmentation

--- a/04_모방학습(Behavior Cloning).ipynb
+++ b/04_모방학습(Behavior Cloning).ipynb
@@ -14,7 +14,7 @@
    "source": [
     "우선적으로 실험해볼 방식은 모방학습이다. 사람이 직접 게임을 플레이하는 모습을 데이터로 수집하고, 이를 인공지능 모델이 학습하도록한다. 학습된 모델은 사람의 플레이를 모방된 형태로 게임을 플레이한다. \n",
     "이를 위해 모델은 어떠한 상황(env)에서 어떠한 선택(action)해야 하는지를 알아야한다. 따라서 아래와 같은 형태로 데이터를 수집하고자 한다.\n",
-    "- 상황(env) : 자동차가 나아가야할 도로의 모양이 보이는 이미지\n",
+    "- 상황(env) : 자동차가 나아가야 할 도로의 모양이 보이는 이미지\n",
     "- 선택(action) : 사람의 입력(up, down, left, right)\n",
     "예시) 예시 사진 넣기"
    ]
@@ -84,32 +84,17 @@
     "\n",
     "- action_1(오른쪽)과 action_2(왼쪽)은 커브 방향과 연관이 되어 있는 것이므로 이미지를 좌우 반전하여 각 데이터로 활용한다.\n",
     "\n",
-    "- "
+    "&emsp;&emsp;&emsp;해당 코드는 `Data_Augmentation.py`에서 확인할 수 있다.\n",
+    "\n",
+    "- 속도가 과도하게 높을 때 방향 전환을 시도하면 미끄러짐에 의해 도로 밖으로 밀려나게된다. 이는 게임 점수를 낮추는 결과를 가져오므로 action_4를 사용하여 속도를 가끔 낮춰준다."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4-1. 이미지 좌우 반전"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5. 모델 학습"
+    "## 5. 모델 학습\n",
+    "모방학습(Behavior Cloning)의 모델은 CNN을 통해서 학습시켰다. "
    ]
   },
   {
